--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -26,6 +26,7 @@
 .file-request-container-size {
     width: 50%;
     max-width: 400px;
+    min-width: 400px;
 }
 
 .bg-danger-soft {
@@ -43,8 +44,16 @@
     transform: scale(0.6);
 }
 
+.slim-progress {
+    max-height: 5px;
+}
+
 .svg-inverted-color {
-    filter: invert(1)
+    filter: invert(1);
+}
+
+.svg-gray-color {
+    opacity: 50%;
 }
 
 .btn {
